Overlap function Initialization; Write, Measure, Position refactor and bug fixing

--- a/style.css
+++ b/style.css
@@ -20,7 +20,15 @@
 }
 
 /*CSS Ouput*/
+#wordcloud{
+    position: relative;
+    width: 700px;
+    height: 400px;
+    background-color: grey;
+}
+
 .cloudWord{
     display: inline-block;
-    padding: 2px;
+    padding: 0;
+    position: absolute;
 }
